--- a/_posts/2020-10-20-java_note.md
+++ b/_posts/2020-10-20-java_note.md
@@ -4,31 +4,26 @@ category : "Java"
 tags : [Java]
 ---
 
-​	프로그래머스의 문제를 풀다가 내가 참 기초가 많이 부족하구나 싶었다. 자동완성을 자주 쓰다보니 자동완성없이는 함수이름도 기억안나고.. 그래서 자잘한 필기를 여기에 정리 해보고자 한다.
+​	Programmer의 문제를 풀다가 내가 참 기초가 많이 부족하구나 싶었다. 자동 완성을 자주 쓰다 보니 자동 완성 없이는 함수 이름도 기억도 안 나고. 빨간 줄이 안 뜨면 어디가 틀린 건지도 모르겠다. 그래서 자잘한 필기를 여기에 정리 해보고자 한다.
 
 ---
 
-### Java Array
+### Array
 
-​	평소에 `List`나 `HashMap`만 쓰다가 `Array`를 써보려니 새삼 새롭다.
-
-
+​	평소에 `List`나 `HashMap`만 쓰다가 `Array`를 써보려니 새삼 새롭다. (~~I love HashMap..~~)
 
 ```java
-.push();
+// 배열(Array)선언
+
+// 2차원 배열 길이 구하기
+
+// 2차원 배열 중복갯수 구하기
+
 ```
 
 
 
-### Java Type
-
-
-
-```text
-어떤 문장의 각 알파벳을 일정한 거리만큼 밀어서 다른 알파벳으로 바꾸는 암호화 방식을 시저 암호라고 합니다. 예를 들어 AB는 1만큼 밀면 BC가 되고, 3만큼 밀면 DE가 됩니다. z는 1만큼 밀면 a가 됩니다. 문자열 s와 거리 n을 입력받아 s를 n만큼 민 암호문을 만드는 함수, solution을 완성해 보세요.
-```
-
-
+### Type
 
 ```java
 // char -> String
@@ -40,12 +35,11 @@ Character.tosting();
 
 
 
-
-
-### Java
+### Etc.
 
 ```java
-//자릿수 구할 때
+// int타입의 자릿수 구할 때
 Math.log10(int)+1;
+
 ```
 
