--- a/_posts/2020-10-24-Spring_1.md
+++ b/_posts/2020-10-24-Spring_1.md
@@ -4,7 +4,7 @@ category : "Spring"
 tag : "Spring"
 ---
 
-​	이번에 개인 웹 프로젝트를 하나 만들어 보고자 `Spring` 프로젝트 셋팅을 새로하게 되었다. 이제까지는 당연히 생성되어 있던 프로젝트에서 개발을 해왔기에 프로젝트 세팅하는법이 생소해져 새로 정리 해보고자 한다.
+​	이번에 개인 웹 프로젝트를 하나 만들어 보고자 `Spring` 프로젝트 셋팅을 새로하게 되었다. 이제까지는 당연히 생성되어 있던 프로젝트에서 개발을 해왔기에 프로젝트 세팅하는법이 생소해져 새로 간략히 정리 해보고자 한다.
 
 ---
 
@@ -29,6 +29,25 @@ tag : "Spring"
 ### tomcat install
 
 ​	web서버 사용을 위해 원하는 버전의 tomcat 다운[https://tomcat.apache.org/](https://tomcat.apache.org/) *.평소 9버전을 사용했기 때문에 tomcat9로 받음.*
+
+
+
+### oracle
+
+- DB는 local에 설치하기 부담되서 우선은 AWS의 RDS를 활용해보려한다.[https://aws.amazon.com/ko/](https://aws.amazon.com/ko/)
+  - AWS RDS에서 데이터베이스 생성후 해당 인스턴스 정보로 DB접속
+
+- SQL developder 설치[https://www.oracle.com/tools/downloads/sqldev-downloads.html](https://www.oracle.com/tools/downloads/sqldev-downloads.html)
+
+
+
+### Spring project 생성
+
+- STS 구동 후 `File > new > other > spring legacy project `로 프로젝트 생성.
+  - spring legacy project 에서 `spring MVC project`생성.
+- **git과 연동**을 위해 프로젝트 생성후 해당 파일들로 `git repository` 생성후 해당 파일을 업로드 하고 STS에 git 프로젝트 import
+
+
 
 
 
