image path modify

--- a/_posts/2020-10-24-Spring_1.md
+++ b/_posts/2020-10-24-Spring_1.md
@@ -12,7 +12,7 @@ tag : "Spring"
 
 ​	우선 Spring 프로젝트를 생성하기 위해 STS [https://spring.io/tools](https://spring.io/tools) 다운로드하고 폴더를 정리함.
 
-<img src="\assets\posts\image-20201024170236744.png" alt="image-20201024170236744" class="image-shadow-card" />
+<img src="/assets/images/posts/image-20201024170236744.png" alt="image-20201024170236744" class="image-shadow-card" />
 
 위와 같이 `git`을 사용할것이기 때문에 미리 폴더를 생성. `java`도 따로 폴더를 만들어 혼동이 없도록 STS폴더안에 정리했습니다.
 
