포스팅 마무리

--- a/_posts/2020-10-24-Spring_1.md
+++ b/_posts/2020-10-24-Spring_1.md
@@ -1,5 +1,5 @@
 ---
-title : "Spring(1) spring web project setting"
+title : "Spring(1) spring web project start"
 category : "Spring"
 tag : "Spring"
 ---
@@ -44,26 +44,25 @@ tag : "Spring"
 ### Spring project 생성
 
 - **프로젝트 생성**
-  
   - `File > new > other > spring legacy project `로 프로젝트 생성.
   - spring legacy project 에서 `spring MVC project`생성.
-  
 - **git 연동**
-
   - github에서 `git repository` 생성 한다.
   - 위에서 생성한 프로젝트의 파일들을 업로드 
   - STS에 git 프로젝트를 import
-
 - **tomcat**
-
   - server에 아까 다운받은 tomcat9를 추가
-
 - **java**
-
   - 프로젝트 우클릭 > build path > configure build path > library 탭에서 `jre system library`를 지우고 다운받은 jdk로 추가
   - `Windows > preferences > project facet`에서  java 버전 변경
+- **Test**
+  - server start 후 로컬[http://localhost:8080/]으로 접속하여 확인.
 
-  
+
+
+---
+
+​	따로 spring setting을 해야할것이 많지만, project setting은 다음 포스팅에 써보려 한다.
 
 
 
