--- a/_posts/2020-10-22-Oracle_1.md
+++ b/_posts/2020-10-22-Oracle_1.md
@@ -165,7 +165,14 @@ END;
 
 
 
+#### 최대값의 idx값구하기
 
+```sql
+select max(ORDNO) KEEP(DENSE_RANK FIRST ORDER BY regdate DESC) 
+from t_coupon_order 
+where to_char(regdate,'YYYYMMDD') = 'YYYYMMDD'
+;
+```
 
 
 
