--- a/_posts/2021-09-23-java_2.md
+++ b/_posts/2021-09-23-java_2.md
@@ -9,20 +9,20 @@ tages : [Spring,job schedule]
 #### Cron Expression
  
 ##### Option
-? : 조건없음 [일, 요일 에서만 사용가능]
-* : 모든 조건에서 참
+###### `?` : 조건없음 [일, 요일 에서만 사용가능]
+###### `*` : 모든 조건에서 참
 시작시간/단위 (예 0/5) : 해당 시작시간부터 해당 단위때 참
 시작범위-끝범위 (예 3-5) : 예제(3-5)는 3에서 5까지 (3, 4, 5) 조건일때 참.
 x,y,z... (예 1,3,5) : 예제(1,3,5) 1,3,5 일때만 참.
-L : [일, 요일 에서만 사용가능]
+###### `L` : [일, 요일 에서만 사용가능]
 - 일에서 사용하면 : 예(L) 마지막 날짜입니다. 예를들어 1월이라면 31일 2월이라면 윤년에 따라 28혹은 29일 4월이라면 30일에 참.
 - 요일에서 사용하면 : 예(6L) 6은(토요일) 마지막 토요일에 실행됩니다. 마지막주가 토요일이 없다면 그전주 토요일에 참.
-W : [일에서만 사용가능]
+###### `W` : [일에서만 사용가능]
 - 가장 가까운 평일(월~토)를 찾습니다.
 - 15W 라고 설정했다면 15일이 월~금 범위라면 해당 날짜에서 참.
 - 15W 15일이 토요일이라면 가장 가까운 금요일인 14일에 참.
 - 15W 15일이 일요일이라면 가장 가까운 월요일인 16일에 참.
-# : [요일에서만 사용가능]
+###### `#` : [요일에서만 사용가능]
 - 예를들어 3#2 라고 썻다면 (수요일#2번째주)라는 의미가 됩니다.
 - 즉 2번째주의 수요일에 참이 됩니다.
 
