--- a/_posts/2021-09-23-java_2.md
+++ b/_posts/2021-09-23-java_2.md
@@ -11,9 +11,9 @@ tages : [Spring,job schedule]
 ##### Option
 ###### `?` : 조건없음 [일, 요일 에서만 사용가능]
 ###### `*` : 모든 조건에서 참
-시작시간/단위 (예 0/5) : 해당 시작시간부터 해당 단위때 참
-시작범위-끝범위 (예 3-5) : 예제(3-5)는 3에서 5까지 (3, 4, 5) 조건일때 참.
-x,y,z... (예 1,3,5) : 예제(1,3,5) 1,3,5 일때만 참.
+- 시작시간/단위 (예 0/5) : 해당 시작시간부터 해당 단위때 참
+- 시작범위-끝범위 (예 3-5) : 예제(3-5)는 3에서 5까지 (3, 4, 5) 조건일때 참.
+- x,y,z... (예 1,3,5) : 예제(1,3,5) 1,3,5 일때만 참.
 ###### `L` : [일, 요일 에서만 사용가능]
 - 일에서 사용하면 : 예(L) 마지막 날짜입니다. 예를들어 1월이라면 31일 2월이라면 윤년에 따라 28혹은 29일 4월이라면 30일에 참.
 - 요일에서 사용하면 : 예(6L) 6은(토요일) 마지막 토요일에 실행됩니다. 마지막주가 토요일이 없다면 그전주 토요일에 참.
