--- a/_posts/2020-10-22-shell.md
+++ b/_posts/2020-10-22-shell.md
@@ -36,3 +36,13 @@ firewall-cmd --reload
 firewall-cmd --zone=public --list-all
 ```
 
+### ping test
+```shell
+ping [domain]
+```
+
+### telnet
+```shell
+telnet [ip]
+```
+
