--- a/_posts/2021-09-23-java_2.md
+++ b/_posts/2021-09-23-java_2.md
@@ -26,8 +26,16 @@ tages : [Spring,job schedule]
 - 예를들어 3#2 라고 썻다면 (수요일#2번째주)라는 의미가 됩니다.
 - 즉 2번째주의 수요일에 참이 됩니다.
 
+##### Example
+- `0 0/5 * * *` : 5분마다
+- `10 0/5 * * * ?` : 10초 뒤 5분마다 수행.
+- `0 30 10-13 ? * WED,FRI` : 매 주 수요일과 금요일 10시~13시 30분에 수행.
+- `0 15 10 ? * 6#3` : 매달 3번째 금요일 10시 15분에 실행
+- `0 0/30 8-9 5,20 * ?` : 매 월 5일과 20일에 8시~9시대에 30분 간격으로 수행. (8:00, 8:30, 9:00, 9:30) 수행
 
 ---
 
 **references**
 - [https://gs.saro.me/dev?tn=548](https://gs.saro.me/dev?tn=548)
+- [https://www.leafcats.com/94](https://www.leafcats.com/94)
+- [https://m.blog.naver.com/PostView.naver?isHttpsRedirect=true&blogId=estern&logNo=110010101624](https://m.blog.naver.com/PostView.naver?isHttpsRedirect=true&blogId=estern&logNo=110010101624)
