--- a/_posts/2021-09-23-java_2.md
+++ b/_posts/2021-09-23-java_2.md
@@ -7,9 +7,9 @@ tages : [Spring,job schedule]
 
 크론작업은 반복되는 주기로 예약되며 unix-cron(`    *   *   *   *   *   `)형식으로 지정된다.(ex.매분 매시간 매일 매주 매달)
 
-### Cron Expression
+## Cron Expression
 
-#### Option
+### Option
 
 `?` : 조건없음 [일, 요일 에서만 사용가능]
 
@@ -38,7 +38,7 @@ tages : [Spring,job schedule]
 
 
 
-#### Example
+### Example
 
 - `0 0/5 * * *` : 5분마다
 - `10 0/5 * * * ?` : 10초 뒤 5분마다 수행.
