--- a/_posts/2020-10-22-shell.md
+++ b/_posts/2020-10-22-shell.md
@@ -1,13 +1,7 @@
 ---
-title : "Javascript - 자주 헷갈리는 것 정리"
-category : "Javascript"
-tags : [Javascript]
----
-
-​	이런 말 좀 부끄럽지만 난 회사 들어오기 전까지는 shell을 사용해 본 적이 거의 없다.  AWS 웹 호스팅 할 때 검색해가며 간신히 몇 글자 써 본 정도..?
-
-이번에 서버를 새로 세팅해야 해서 서버 구조 및 설치파일 & 백업을 해야 하는데 서버 관련된 지식이 완전 '0' 인지라 하나 씩 검색하여 알아 가고 있다.
-
+title : "shell - install/firewall check"
+category : "shell"
+tags : [shell]
 ---
 
 ### install check
@@ -25,7 +19,7 @@ crontab -l # deamon? job schedualer? check / ex) rdate
 
 
 
-### port check
+### firewall check
 
 ```shell
 # Port 열기
@@ -35,14 +29,3 @@ firewall-cmd --reload
 # Port 리스트
 firewall-cmd --zone=public --list-all
 ```
-
-### ping test
-```shell
-ping [domain]
-```
-
-### telnet
-```shell
-telnet [ip]
-```
-
