--- a/_posts/2021-09-23-shell_2.md
+++ b/_posts/2021-09-23-shell_2.md
@@ -42,7 +42,11 @@ curl [목적지] #default:GET
 # -d ['바디 타입: 바디 값'] 
 ```
 
+----
 
+**references**
+
+- [https://toneyparky.tistory.com/59](https://toneyparky.tistory.com/59)
 
 ----
 
