--- a/_posts/2021-09-23-shell_2.md
+++ b/_posts/2021-09-23-shell_2.md
@@ -3,8 +3,7 @@ title : "shell - ping, telnet, curl"
 category : "shell"
 tags : [shell]
 ---
-
-## ping
+### ping
 
 - ping(Packet Internet Groper) [^1]
 - 지정한 대상에게 패킷을 전송하고 대상이 보내는 응답을 분석
@@ -18,7 +17,7 @@ ping [option][목적지]
 # -n 횟수
 ```
 
-## telnet
+### telnet
 
 - 컴퓨터와 컴퓨터 사이를 연결해주는 명령어(원격 터미널 접속 기능)
 
@@ -29,7 +28,7 @@ POST /index.html HTTP/2.0
 # 위와 같이 입력가능
 ```
 
-## curl
+### curl
 
 - 서버와 통신할 수 있는 커맨드 명령어 툴
 - HTTP 프로토콜뿐 아니라 다양한 프로토콜을 이용할 수 있다
