파일명 형식 맞추기

--- a/_posts/2020-10-20-javaNote.md
+++ b/_posts/2020-10-20-javaNote.md
@@ -6,7 +6,7 @@ tags : [Java]
 
 ### Array
 
-​	평소에 `List`나 `HashMap`만 쓰다가 `Array`를 써보려니 새삼 새롭다. (~~I love HashMap..~~)
+​	평소에 `List`나 `HashMap`만 쓰다가 `Array`를 써보려니 새삼 새롭다.
 
 ```java
 // 배열(Array)선언
