--- a/_posts/2020-10-20-javaNote.md
+++ b/_posts/2020-10-20-javaNote.md
@@ -1,24 +1,8 @@
 ---
-title : "새삼 새로운 Java 노트"
+title : "Java - Char & String 형변환"
 category : "Java"
 tags : [Java]
 ---
-
-### Array
-
-​	평소에 `List`나 `HashMap`만 쓰다가 `Array`를 써보려니 새삼 새롭다.
-
-```java
-// 배열(Array)선언
-
-// 2차원 배열 길이 구하기
-
-// 2차원 배열 중복갯수 구하기
-
-```
-
-
-
 ### Type
 
 ```java
