--- a/_posts/2021-12-20-CssIE.md
+++ b/_posts/2021-12-20-CssIE.md
@@ -24,4 +24,14 @@ body{
 }
 </style>
 <![endif]-->
+
+<!--[if IE 8]> <![endif]--> /* = IE8 */
+<!--[if IE 9]> <![endif]--> /* = IE9 */
+<!--[if IE 10]> <![endif]--> /* = IE10 */
+<!--[if IE 11]> <![endif]--> /* = IE11 */
+
+<!--[if lte IE 9]> <![endif]--> /* >= IE9 */
+<!--[if gte IE 9]> <![endif]--> /* <= IE9 */
+
+<!--[if !IE]> <![endif]--> /* != IE */
 ```
