--- a/_posts/2021-12-20-CssForIE.md
+++ b/_posts/2021-12-20-CssForIE.md
@@ -1,7 +1,7 @@
 ---
 title : "CSS - CSS IE에만 적용하기 "
 category : "CSS"
-tages : [CSS,IE]
+tags : [CSS,IE]
 date : 2021-12-10T12:00:00
 last_modified_at: 2021-12-10T12:00:00
 ---
