--- a/_posts/2021-12-30-DBLock.md
+++ b/_posts/2021-12-30-DBLock.md
@@ -1,7 +1,7 @@
 ---
 title : "Database - Transaction"
 category : "Database"
-tages : [Database,Transaction]
+tags : [Database,Transaction]
 date : 2022-01-12T12:00:00
 last_modified_at: 2022-01-12T12:00:00
 ---
