--- a/_posts/2022-01-12-DBIndex.md
+++ b/_posts/2022-01-12-DBIndex.md
@@ -1,7 +1,7 @@
 ---
 title : "Database - Index"
 category : "Database"
-tages : [Database,Index]
+tags : [Database,Index]
 date : 2021-12-20T12:00:00
 last_modified_at: 2021-12-20T12:00:00
 ---
