--- a/_posts/2022-01-21-TDD.md
+++ b/_posts/2022-01-21-TDD.md
@@ -1,7 +1,7 @@
 ---
 title : "TDD - TDD JunitTest"
 category : "TDD"
-tages : [TDD,Junit]
+tags : [TDD,Junit]
 date : 2022-01-21T12:00:00
 last_modified_at: 2022-01-21T12:00:00
 ---
