--- a/_posts/2021-12-20-JavaEnum.md
+++ b/_posts/2021-12-20-JavaEnum.md
@@ -28,6 +28,11 @@ enum Day{
 }
 ```
 
+### enum method
+- `alues()` : enum안에 존재하는 모든 값들은 반환
+- `ordinal()` : 배열 인덱스처럼 각 enum 상수 인덱스를 반환
+- `valueOf()` : 존재한다면 특정 enum 상수의 스트링 값을 반환
+
 ---
 
 **references**
