--- a/_posts/2022-12-21-socket.md
+++ b/_posts/2022-12-21-socket.md
@@ -6,100 +6,51 @@ date : 2022-12-21T12:00:00
 last_modified_at: 2023-01-14T12:00:00
 comment: true
 ---
-기존 연동사에서 소켓통신 방식으로 변경해야한다 하여 소켓 연동 진행.
 
-- 환경 : java1.7, STS3
+기존 연동사에서 소켓통신 방식으로 변경해야한다 하여 소켓 연동 진행.
 
 ### Client Code
 
 ```java
-public Object culturelandSocket(Object[] obj) {
-		String ip = CommonUtil.getProperties("extern", "pin.cultureland.ip");
-		int port = Integer.valueOf(CommonUtil.getProperties("extern", "pin.cultureland.port"));
-		Object result = null;
+@SuppressWarnings("unchecked")
+	public static <T> T doSocket(String ip, int port, T t) throws Exception {
+		Socket socket = null;
+		T result = null;
 		try {
 			// 1. 소켓 생성
-	        Socket socket = new Socket(); 
+	        socket = new Socket(); 
 	        SocketAddress address = new InetSocketAddress(ip, port);
 	        socket.connect(address);
-	        socket.setSoTimeout(10000);
-	        extern_log.info("socekt connected >> getRemoteSocketAddress : "+socket.getRemoteSocketAddress());
+	        socket.setSoTimeout(soTimeout);
+	        soc_log.info("socekt connected >> getRemoteSocketAddress : "+socket.getRemoteSocketAddress());
 	        
-	        try {
-	        	// 2. 요청 보내기
-	            byte[] data = toByteArray(obj);
-	            //서버로 내보내기 위한 출력 스트림 뚫음
-	            OutputStream os = socket.getOutputStream();
-	            //출력 스트림에 데이터 씀
-	            os.write(data);
-	            //보냄
-	            os.flush();
-	            
-	            // 3. 응답 받기
-	            int maxBufferSize = 300;
-	            //버퍼 생성
-	            byte[] recvBuffer = new byte[maxBufferSize];
-	            //서버로부터 받기 위한 입력 스트림 뚫음
-	            InputStream is = socket.getInputStream();
-	            //버퍼(recvBuffer) 인자로 넣어서 받음. 반환 값은 받아온 size
-	            int nReadSize = is.read(recvBuffer);
-
-	            //받아온 값이 0보다 클때
-	            if (nReadSize > 0) {
-	                result = toObject(recvBuffer);
-	            }
-	        } catch (IOException e) {
-	            e.printStackTrace();
-	        } finally{
-	        	socket.close();
-	        }
+	        // 2. 요청 보내기
+	        // 보낼 데이터 object -> byteArray로 변환
+	        ByteArrayOutputStream bos = new ByteArrayOutputStream();
+	        ObjectOutputStream oos = new ObjectOutputStream(bos);
+	        oos.writeObject(t);
+            oos.flush();
+	        byte[] data = bos.toByteArray();
+	        // 데이터 전송
+	        OutputStream os = socket.getOutputStream();
+	        os.write(data);
+	        os.flush();
+            
+	        // 3. 응답 받기
+            byte[] recvBuffer = new byte[maxBufferSize];
+            InputStream is = socket.getInputStream();
+            if (is.read(recvBuffer) > 0) {                
+            	ObjectInputStream ois = new ObjectInputStream (new ByteArrayInputStream (recvBuffer));
+            	result = (T) ois.readObject();
+            }
+            
+		} catch(ConnectException e) {
+			soc_log.info("소켓 연결 실패");
 		} catch(Exception e) {
 			e.printStackTrace();
-		}		
+		}
 		return result;
 	}
-	
-	 public static byte[] toByteArray (Object obj){
-        byte[] bytes = null;
-        ByteArrayOutputStream bos = new ByteArrayOutputStream();
-        ObjectOutputStream oos = null;
-        try {
-            oos = new ObjectOutputStream(bos);
-            oos.writeObject(obj);
-            oos.flush();
-            oos.close();
-            bos.close();
-            bytes = bos.toByteArray();
-        }
-        catch (IOException e) {
-           e.printStackTrace();
-        } finally {
-			try {
-				if(oos != null) oos.close();
-				if(bos != null) bos.close();
-			} catch (IOException e) {
-				e.printStackTrace();
-			}
-        }
-        return bytes;
-    }
-
-    public static Object toObject (byte[] bytes){
-        Object obj = null;
-        try {
-            ByteArrayInputStream bis = new ByteArrayInputStream (bytes);
-            System.out.println(bis.toString());
-            ObjectInputStream ois = new ObjectInputStream(bis);
-            obj = ois.readObject();
-        }
-        catch (IOException e) {
-            e.printStackTrace();
-        }
-        catch (ClassNotFoundException e) {
-        	e.printStackTrace();
-        }
-        return obj;
-    }
 ```
 
 ### Server Code
@@ -107,52 +58,39 @@ public Object culturelandSocket(Object[] obj) {
 테스트를 위해 임시로 사용한 서버코드
 
 ```java
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
-import java.net.ServerSocket;
-import java.net.Socket;
+public static void main(String[] args) throws IOException{
+    SocketServer socketServer = new SocketServer();
+    socketServer.run();
+  }
 
-public class SocketServer {
+public void run() throws IOException{
+	ServerSocket server = null;
+    try {
+        int port = 58004;
+        server = new ServerSocket(port);
 
-    public static void main(String[] args) throws IOException{
-        SocketServer socketServer = new SocketServer();
-        socketServer.run();
-    }
-
-    public void run() throws IOException{
-        try {
-            int port = 58004;
-            ServerSocket server = new ServerSocket(port);
-
-            while(true){
-                System.out.println("-------접속 대기중------");
-                Socket socket = server.accept();         // 계속 기다리고 있다가 클라이언트가 접속하면 통신할 수 있는 소켓 반환
-                System.out.println(socket.getInetAddress() + "로 부터 연결요청이 들어옴");
-                InputStream is = socket.getInputStream();
-                byte[] bytes = new byte[1024];
-
-                int readByteCount = is.read(bytes);
-
-                if (readByteCount > 0) {
-                    System.out.println("클라이언트로 부터 데이터 수신");
-                    sendData(bytes, socket);
-                }
-                System.out.println("****** 재전송 완료 ****");
+        while(true){
+            System.out.println("-------접속 대기중------");
+            Socket socket = server.accept(); // 계속 기다리고 있다가 클라이언트가 접속하면 통신할 수 있는 소켓 반환
+            System.out.println(socket.getInetAddress() + "accepted");
+            
+            // 소켓으로 전달된 데이터 읽기
+            InputStream is = socket.getInputStream();
+            byte[] bytes = new byte[300];
+            if (is.read(bytes) > 0) {
+            	// 받은데이터 그대로 재 전달
+                System.out.println("클라이언트로 부터 데이터 수신");
+                OutputStream os = socket.getOutputStream();
+    	        os.write(bytes);
+    	        os.flush();
             }
-        } catch (Exception e) {
-            e.printStackTrace();
+            
+            System.out.println("****** 전송 완료 ****");
         }
-    }
-
-    public void sendData(byte[] bytes, Socket socket){
-        try {
-            OutputStream os = socket.getOutputStream();
-            os.write(bytes);
-            os.flush();
-        } catch(Exception e1){
-            e1.printStackTrace();
-        }
+    } catch (Exception e) {
+        e.printStackTrace();
+    } finally {
+    	if(!server.isClosed()) server.close();
     }
 }
 ```
