코드 들여쓰기 수정

--- a/_posts/2022-12-21-socket.md
+++ b/_posts/2022-12-21-socket.md
@@ -7,55 +7,56 @@ last_modified_at: 2023-01-14T12:00:00
 comment: true
 ---
 
-기존 연동사에서 소켓통신 방식으로 변경해야한다 하여 소켓 연동 진행.
+- 기존 연동사에서 소켓통신 방식으로 변경해야한다 하여 소켓 연동 진행.
+- 소켓통신을 사용하는 다른 공급사 연동이 추후에 진행될수도 있으므로 모듈화
 
 ### Client Code
 
 ```java
 @SuppressWarnings("unchecked")
-	public static <T> T doSocket(String ip, int port, T t) throws Exception {
-		Socket socket = null;
-		T result = null;
-		try {
-			// 1. 소켓 생성
-	        socket = new Socket(); 
-	        SocketAddress address = new InetSocketAddress(ip, port);
-	        socket.connect(address);
-	        socket.setSoTimeout(soTimeout);
-	        soc_log.info("socekt connected >> getRemoteSocketAddress : "+socket.getRemoteSocketAddress());
-	        
-	        // 2. 요청 보내기
-	        // 보낼 데이터 object -> byteArray로 변환
-	        ByteArrayOutputStream bos = new ByteArrayOutputStream();
-	        ObjectOutputStream oos = new ObjectOutputStream(bos);
-	        oos.writeObject(t);
-            oos.flush();
-	        byte[] data = bos.toByteArray();
-	        // 데이터 전송
-	        OutputStream os = socket.getOutputStream();
-	        os.write(data);
-	        os.flush();
-            
-	        // 3. 응답 받기
-            byte[] recvBuffer = new byte[maxBufferSize];
-            InputStream is = socket.getInputStream();
-            if (is.read(recvBuffer) > 0) {                
-            	ObjectInputStream ois = new ObjectInputStream (new ByteArrayInputStream (recvBuffer));
-            	result = (T) ois.readObject();
-            }
-            
-		} catch(ConnectException e) {
-			soc_log.info("소켓 연결 실패");
-		} catch(Exception e) {
-			e.printStackTrace();
-		}
-		return result;
+public static <T> T doSocket(String ip, int port, T t) throws Exception {
+	Socket socket = null;
+	T result = null;
+	try {
+				// 1. 소켓 생성
+        socket = new Socket(); 
+        SocketAddress address = new InetSocketAddress(ip, port);
+        socket.connect(address);
+        socket.setSoTimeout(soTimeout);
+        soc_log.info("socekt connected >> getRemoteSocketAddress : "+socket.getRemoteSocketAddress());
+        
+        // 2. 요청 보내기
+        // 보낼 데이터 object -> byteArray로 변환
+        ByteArrayOutputStream bos = new ByteArrayOutputStream();
+        ObjectOutputStream oos = new ObjectOutputStream(bos);
+        oos.writeObject(t);
+        oos.flush();
+        byte[] data = bos.toByteArray();
+        // 데이터 전송
+        OutputStream os = socket.getOutputStream();
+        os.write(data);
+        os.flush();
+          
+        // 3. 응답 받기
+        byte[] recvBuffer = new byte[maxBufferSize];
+        InputStream is = socket.getInputStream();
+        if (is.read(recvBuffer) > 0) {                
+        	ObjectInputStream ois = new ObjectInputStream (new ByteArrayInputStream (recvBuffer));
+        	result = (T) ois.readObject();
+        }
+        
+	} catch(ConnectException e) {
+		soc_log.info("소켓 연결 실패");
+	} catch(Exception e) {
+		e.printStackTrace();
 	}
+	return result;
+}
 ```
 
 ### Server Code
 
-테스트를 위해 임시로 사용한 서버코드
+- 테스트를 위해 임시로 사용한 서버코드
 
 ```java
 public static void main(String[] args) throws IOException{
@@ -101,44 +102,44 @@ public void run() throws IOException{
 
 ```java
 public static byte[] toByteArray (Object obj){
-        byte[] bytes = null;
-        ByteArrayOutputStream bos = new ByteArrayOutputStream();
-        ObjectOutputStream oos = null;
-        try {
-            oos = new ObjectOutputStream(bos);
-            oos.writeObject(obj);
-            oos.flush();
-            bytes = bos.toByteArray();
-        }
-        catch (IOException e) {
-           e.printStackTrace();
-        } finally {
-			try {
-				if(oos != null) oos.close();
-				if(bos != null) bos.close();
-			} catch (IOException e) {
-				e.printStackTrace();
-			}
-        }
-        return bytes;
+    byte[] bytes = null;
+    ByteArrayOutputStream bos = new ByteArrayOutputStream();
+    ObjectOutputStream oos = null;
+    try {
+        oos = new ObjectOutputStream(bos);
+        oos.writeObject(obj);
+        oos.flush();
+        bytes = bos.toByteArray();
     }
-	
-	public static Object toObject (byte[] bytes) {
-        Object obj = null;
-        try {
-            ByteArrayInputStream bis = new ByteArrayInputStream (bytes);
-            ObjectInputStream ois = new ObjectInputStream (bis);
-            obj = ois.readObject();
-        }
-        catch (Exception e) {
-            e.printStackTrace();
-        }
-        return obj;
+    catch (IOException e) {
+       e.printStackTrace();
+    } finally {
+	try {
+		if(oos != null) oos.close();
+		if(bos != null) bos.close();
+	} catch (IOException e) {
+		e.printStackTrace();
+	}
     }
+    return bytes;
+}
+
+public static Object toObject (byte[] bytes) {
+    Object obj = null;
+    try {
+        ByteArrayInputStream bis = new ByteArrayInputStream (bytes);
+        ObjectInputStream ois = new ObjectInputStream (bis);
+        obj = ois.readObject();
+    }
+    catch (Exception e) {
+        e.printStackTrace();
+    }
+    return obj;
+}
 ```
 
 - stream은 쓰는것과 읽는 것의 형식이 같아야한다.
-- `output.writeObject(date)` 의 경우로 쓰면 `input.readObject()`로 읽어야 된다
+- `output.writeObject(date)` 의 경우로 쓰면 `input.readObject()`로 읽어야 된다.
 
 ---
 
