거슬리는거 정리

--- a/_posts/2021-12-20-JavaEnum.md
+++ b/_posts/2021-12-20-JavaEnum.md
@@ -8,11 +8,11 @@ last_modified_at: 2021-12-20T12:00:00
 
 ## Enum (enumeration)
 
-- **열거형(enumerated type) : 서로 연관된 `상수들의 집합`을 의미**
+- **열거형(enumerated type) : 서로 연관된 상수들의 집합을 의미**
 - Java 1.5 이상 사용가능
 - 장점
-    - 코드가 간결해지므로 `가독성`이 좋아짐
-    - 인스턴스 생성 및 상속을 방지하여 `타입안정성`이 보장됨
+    - 코드가 간결해지므로 **가독성**이 좋아짐
+    - 인스턴스 생성 및 상속을 방지하여 **타입안정성**이 보장됨
 
 ```java
 // 기존의 상수정의
