제목 오타 수정

--- a/_posts/2022-02-10-JavaGdc.md
+++ b/_posts/2022-02-10-JavaGdc.md
@@ -1,5 +1,5 @@
 ---
-title : "Java - Boxing"
+title : "Java - 최대공약수(gcd)"
 category : "Java"
 tags : [gcd]
 date : 2022-02-10T12:00:00
@@ -14,10 +14,10 @@ comment: true
 
 ```java
 private static int gcdThing(int a, int b) {
-		BigInteger b1 = BigInteger.valueOf(a); 
-		BigInteger b2 = BigInteger.valueOf(b); 
-		BigInteger gcd = b1.gcd(b2); 
-		
-		return gcd.intValue(); 
-	}
+	BigInteger b1 = BigInteger.valueOf(a); 
+	BigInteger b2 = BigInteger.valueOf(b); 
+	BigInteger gcd = b1.gcd(b2); 
+	
+	return gcd.intValue(); 
+}
 ```
