카테고리 수정

--- a/_posts/2021-12-20-JavaEnum.md
+++ b/_posts/2021-12-20-JavaEnum.md
@@ -1,7 +1,7 @@
 ---
 title : "Java - Java Enum"
 category : "Java"
-tags : [Java,enum]
+tags : [Java,Enum]
 date : 2021-12-20T12:00:00
 last_modified_at: 2021-12-20T12:00:00
 ---
