--- a/_posts/2022-02-10-JavaGdc.md
+++ b/_posts/2022-02-10-JavaGdc.md
@@ -1,7 +1,7 @@
 ---
 title : "Java - 최대공약수(gcd)"
 category : "Java"
-tags : [gcd]
+tags : [Java,gcd]
 date : 2022-02-10T12:00:00
 last_modified_at: 2022-02-10T12:00:00
 comment: true
