--- a/_posts/2022-12-21-socket.md
+++ b/_posts/2022-12-21-socket.md
@@ -1,14 +1,12 @@
 ---
 title : "Java - socket"
 category : "Java"
-tags : [socket]
+tags : [Socket]
 date : 2022-12-21T12:00:00
 last_modified_at: 2023-01-14T12:00:00
 comment: true
 ---
-
-- 기존 연동사에서 소켓통신 방식으로 변경해야한다 하여 소켓 연동 진행.
-- 소켓통신을 사용하는 다른 공급사 연동이 추후에 진행될수도 있으므로 모듈화
+기존 연동사에서 소켓통신 방식으로 변경해야한다 하여 소켓 연동 진행.
 
 ### Client Code
 
@@ -140,6 +138,11 @@ public static Object toObject (byte[] bytes) {
 
 - stream은 쓰는것과 읽는 것의 형식이 같아야한다.
 - `output.writeObject(date)` 의 경우로 쓰면 `input.readObject()`로 읽어야 된다.
+
+### EOFException
+
+- `ObjectOutputStream` 또는 `ObjectInputStream` 를 사용하여 직렬화, 역직렬화 하는 과정에서 발생한 Exception
+- `readObject()` 메소드가 읽을 데이터가 없는 경우,  null이 아닌 `EOFException` 을 반환
 
 ---
 
