--- a/_posts/2023-01-19-synonym.md
+++ b/_posts/2023-01-19-synonym.md
@@ -1,7 +1,7 @@
 ---
 title : "Database - synonym"
-category : "synonym"
-tags : [synonym]
+category : "Database"
+tags : [Database, synonym]
 date : 2023-01-19T12:00:00
 last_modified_at: 2023-01-14T12:00:00
 comment: true
