--- a/_posts/2023-01-30-ipcheck.md
+++ b/_posts/2023-01-30-ipcheck.md
@@ -1,7 +1,7 @@
 ---
 title : "Java - IPCheck"
-category : "java"
-tags : [java,ipcheck]
+category : "Java"
+tags : [Java,IP]
 date : 2023-01-30T12:00:00
 last_modified_at: 2023-02-28T12:00:00
 comment: true
@@ -40,7 +40,7 @@ if (ip == null || ip.length() == 0 || "unknown".equalsIgnoreCase(ip)) {
 고객사에서 사용하는 실제 ip는 두번째 ip였으나 다른 고객사에서 동일하게 복수 ip로 들어 올 경우 하나라도 등록 되어있으면 통과하도록 수정 (추후 보완해야 할 것 같음.)
 
 ```java
-if(url.contains(",")) {	// X-Forwarded-For인 경우 ip가 복수로 들어오는 경우 존재
+	if(url.contains(",")) {	// X-Forwarded-For인 경우 ip가 복수로 들어오는 경우 존재
 		String[] url_arr = url.split(",");
 		List<String> checkipList = Arrays.asList(checkIp_arr);
 		for(int i=0;i<url_arr.length;i++){
