--- a/_posts/2023-01-25-hint.md
+++ b/_posts/2023-01-25-hint.md
@@ -1,7 +1,7 @@
 ---
 title : "Database - hint"
 category : "Database"
-tags : [oracle, hint]
+tags : [Oracle, Hint]
 date : 2023-01-25T12:00:00
 last_modified_at: 2023-02-28T12:00:00
 comment: true
