--- a/_posts/2023-02-01-firewall.md
+++ b/_posts/2023-02-01-firewall.md
@@ -1,6 +1,6 @@
 ---
 title : "OS - linux firewall"
-category : "Linux"
+category : "OS"
 tags : [Linux, firewall]
 date : 2023-02-01T12:00:00
 last_modified_at: 2023-02-28T12:00:00
